Fixed hero text flex alignment

--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,17 @@ body {
 .hero-text{
     flex: 1 1 0;
     margin-right: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 .hero.main-text {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
     margin: 0;
+    justify-self: baseline;
 }
 .hero.secondary-text, .footer {
     color: #E5E7EB;
